# ml-ops

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  dvc.yaml  params.yaml.dvc  pyproject.toml  tox.ini
.dvc/: config  readme.txt
.github/workflows/: ml-ops.yml  test.yml
Containerization/: Dockerfile  README.md
Module 1. Containerization/: Dockerfile
Module 2. Data governance/: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  params.yaml  params.yaml.dvc  pyproject.toml
Module 2. Data governance/.dvc/: config
Module 2. Data governance/.github/workflows/: cml.yaml
Module 2. Data governance/data/predictions/: .gitignore  predictions_2022-05-27_13:50:00.csv.dvc
Module 2. Data governance/reports/metrics/: .gitignore  hyper_params.json  metrics.json  plots.json
Module 2. Data governance/src/: __init__.py
Module 2. Data governance/src/data/: make_dataset.py
Module 2. Data governance/src/models/: predict_model.py  train_model.py  validate_model.py
Module 2. Data governance/src/visualization/: visualize.py
Module 2. Data governance/tests/: lint.py  test_make_dataset.py  test_predict_model.py  test_validate_model.py  test_visualize.py
data/predictions/: predictions.csv
docker/service_image/: Dockerfile  docker_build.md
docker/training_pipeline_image/: Dockerfile
dvc_plots/: index.html
k8s_configs/: README.md
mlops_build/: pyproject.toml
models/: .gitignore
poetry_build/: README.md
tests/: test_make_dataset.py  test_predict_model.py  test_train_model.py  test_validate_model.py  test_visualize.py
(+32 files in other folders)
