[tool.poetry]
name = "data_governance"
version = "0.1.0"
description = "dvc practice"
license = "none"
authors = ["gordeev.al <aleksandr_gordeev2@epam.com>"]
packages = [{include = "pytest"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tqdm = "^4.64.0"
click = "^8.1.2"
seaborn = "0.11.2"
dynaconf = "^3.1.8"
scikit-learn = "1.1.1"
dvc = {extras = ["s3"], version = "^2.10.2"}
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "4.0.1"
black = "22.3.0"
pre-commit-hooks = "4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
